<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginInListInside"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:backgroundTint="@color/bluesteel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_poss"/>

    <TextView
        android:id="@+id/title_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Veuillez ajouter toutes les données"
        android:layout_margin="@dimen/marginInListInside"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeTextVal"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_poss"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textColorHint="@color/black"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonBack">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/typeAdd_poss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:hint="Type Possession"
            android:inputType="textPersonName"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_place"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:layout_margin="15dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/add_poss">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quesPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="Endroit"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_desc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:layout_margin="15dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/add_place">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quesDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="Description"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_val"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:layout_margin="15dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/add_desc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quesVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="Valeur"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_statut"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:layout_margin="15dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/add_val">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quesStatut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="Statut"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_adr"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:layout_margin="15dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/add_statut">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quesAdr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="Adresse"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_surface"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:layout_margin="15dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/add_adr">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quesSurface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="Surface"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_nbrePiece"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:layout_margin="15dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/add_surface">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quesNbrePiece"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="Nbre de Pièce"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_agent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:layout_margin="15dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/add_nbrePiece">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quesAgent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="Nom Agent"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bluesteel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_agent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Ajouter"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>