...
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        </GridLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_possession"
            android:name="com.example.go4lunch.ListRestFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".listrest.ListRestFragment"
...
        android:id="@+id/add_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginInListInside"
        android:src="@drawable/ic_baseline_manage_search_24"
        app:backgroundTint="@color/bluesteel"
        app:layout_constraintBottom_toTopOf="@id/add_possession"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_possession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
